test: Fix all test assertions to match real WRK benchmark data
- Updated MetricsFileProcessorTest assertions to match actual WRK data values
- Updated QuarkusMetricsPostProcessorTest to use real metrics path
- All 180 tests now pass with real production metrics data
- Pre-commit build successful with all quality checks

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>